[package]
name = "tmev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "3", features = ["cargo", "derive", "env"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
crossterm = { version = "0.25.0" }
serde = { version = "1", features = ["derive"] }
tui="0.19.0"
clap = { version = "4.1.1", features = ["derive"] }
reqwest = {version="0.11", features=["json"]}
serde_derive="1.0.152"
serde_json="1.0.91"
spinners = "4.1.0"
