[package]
name = "searcher-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

 [dependencies]
actix-web = "4"
serde = "1.0.136"
dotenv = "0.15.0"
futures = "0.3"
env_logger = "0.10.0"
log = "0.4.6"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 